# MonkeyBrain

./: .env  .gitignore  .packagefolder  Example.toe  README.md  pyproject.toml
src/monkeybrain/: __init__.py
src/monkeybrain/tools/: file_meta.py  log.py  project.py  search.py  setup_project.py
src/touchlaunch/: __init__.py  launcher.py
