[project]
name = "touchlaunch"
version = "0.2.1"
description = "An automated launcher for TouchDesigner Projects."
readme = "README.md"
license="MIT"
authors = [
    { name = "Wieland Hilker", email = "Wieland@PlusPlus.One" }
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.1",
]

[tool.touchdesigner]
enforce-version="latest-version"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/touchlaunch"]

[project.scripts]
designer = "touchlaunch:designer"
edit = "touchlaunch:designer"
player = "touchlaunch:player"
setup_code = "touchlaunch:setup_code"
