[project]
name = "monkeybrain"
version = "0.3.1"
description = "A CLI-Tool for launching TouchDesigner projects."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [ "python-dotenv>=1.1.1", "pywin32>=311", "toml>=0.10.2",]
keywords = [ "TouchDesigner", "UV", "WindowsOnly",]
[[project.authors]]
name = "Wieland Hilker"
email = "Wieland@PlusPlus.One"

[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project.urls]
Website = "https://plusplus.one"
Repository = "https://github.com/PlusPlusOneGmbH/Monkeybrain"

[project.scripts]
mb = "monkeybrain:entry"

[tool.monkeybrain]
touchdesigner-version = "2025.32260"
enfore-version = "strict"
projectfile = "Example.toe"
enforce-version = "strict"

[tool.touchdesigner.TDPyEnvManagerContext]
mode = "Python vEnv"
envName = ".venv"
installPath = "."
extraPaths = [ "src", "${UV_PROJECT_ENVIRONMENT}/Lib/site-packages", ".venv/Lib/site-packages",]

[tool.hatch.build.targets.wheel]
packages = [ "src/monkeybrain",]
